# symbolic-mcp

./: .bandit  .commitlint.yaml  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLIANCE_NOTES.md  CONTRIBUTING.md  Dockerfile  FASTMCP_INTEGRATION_ANALYSIS.md  LICENSE  LINTING.md  README.md  SECURITY.md  SECURITY_FIXES_DOCUMENTATION.md  TECH_DEBT.md  VERSION_MANAGEMENT.md  _version.py  core_test.py  direct_test.py  final_comprehensive_test.py  final_cve_validation.py  final_security_test.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_analyze_branches_section4_schema.py  test_compare_functions_section_4_schema.py  test_compare_implementation.py  test_core_fixes.py  test_core_functionality.py  test_eval_security_fix.py  test_eval_vulnerability.py  test_exact_eval.py  test_final_comprehensive.py  test_final_schema.py  (+22 more)
.claude/artifacts/: test_security_isolation.py  verify_compatibility_fixes.py
.claude/signoffs/: architect-assessment-CVE-003-001-FAILURE.json  architect-assessment-final.json  architect-assessment-integration-tests.json  architect-assessment-license-headers.json  architect-assessment-task-7-crosshair-2025-12-20.json  architect-assessment-task4.json  architect-assessment-task5.json  architect-assessment-task8.json  architect-assessment.json  architect-cve-003-001-final-assessment-2025-12-20.json  architect-security-re-review-2025-12-20.json  aws-security-assessment.json  code-reviewer-security-fix.json  code-reviewer-task-6-crosshair-2025-12-20.json  code-reviewer-task-8.json  code-reviewer.json  oss-readiness.json  tech-debt.json  wheel-reinvention-auditor-2024-12-20.json  wheel-reinvention-auditor.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  README.md  dependabot.yml  health.md
.github/ISSUE_TEMPLATE/: config.yml  feature_request.md  question.md  security_vulnerability.md
.github/workflows/: README.md  advanced-security-testing.yml  ci-cd.yml  dependabot-auto-merge.yml  dependabot-pr-management.yml  dependency-security-monitoring.yml  health-check.yml  integration-testing.yml  release.yml  semantic-release.yml
.plan/: ADR-god-module-decomposition-review.md  architecture_review_scalability_fixes_2026-02-08.md
docs/: api.md  dependabot-configuration.md  examples.md
docs/adr/: 000-template.md  001-framework-selection.md  002-symbolic-engine.md  003-security-model.md  004-resource-limits.md  005-isolation-strategy.md  006-thread-safety.md  007-coverage-calculation.md  008-validation-architecture.md  009-error-handling.md  010-contract-styles.md  011-authentication-authorization.md  012-single-file-architecture.md  013-mcp-tool-surface-design.md  014-stateless-request-model.md  015-typeddict-return-types.md  016-environment-variable-configuration.md  017-timeout-cascade-configuration.md  018-test-quality-gates.md  019-python-version-compatibility.md  020-mcp-resource-endpoints.md  021-prompt-template-design.md  022-dangerous-builtins-policy.md  023-defense-in-depth-security.md  README.md  SUMMARY.md
scripts/: README.md  check_fastmcp_compatibility.py  setup_dev.py  sync_version.py  verify-dependabot-config.py
spec/: Symbolic Execution MCP Specification.md
symbolic_mcp/: __init__.py  analyzer.py  config.py  parsing.py  security.py  server.py  tools.py  types.py
tests/: conftest.py  test_allowed_modules_whitelist.py  test_ast_edge_case_indexerror.py  test_branch_analysis.py  test_complexity_calculation.py  test_concurrent_safety.py  test_critical_vulnerability_demonstration.py  test_crosshair_initialization_integration.py  test_crosshair_real.py  test_crosshair_section_5_1_compliance.py  test_equivalence_check.py  test_error_handling.py  test_exception_handling.py  test_fastmcp_security.py  test_find_path_to_exception_schema.py  test_integer_parsing.py  test_integration.py  test_module_name_uniqueness.py  test_oauth_configuration.py  test_parser_edge_cases.py  test_real_crosshair_integration.py  test_realistic_import_blocking.py  test_resource_cleanup.py  test_resources_and_prompts.py  test_restricted_importer.py  test_security_bypass_vulnerability.py  test_symbolic_finds_bug.py  test_symbolic_schema_compliance.py  test_unreachable_exception.py  test_validation.py  test_validation_edge_cases.py  test_validation_integration.py  types.py
tests/demos/: README.md  __init__.py  vulnerabilities.py
tests/integration/: README.md  __init__.py  conftest.py  dependency_container.py  interfaces.py  mocks.py  request_executor.py  test_architectural_improvements.py  test_crosshair_failure_harness.py  test_e2e_harness.py  test_failing_integration_tests.py  test_load_harness.py  test_memory_leak_detector.py  test_runner.py  test_security_harness.py
