# SPDX-License-Identifier: MIT
# Copyright (c) 2025 Symbolic MCP Contributors

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "symbolic-mcp"
version = "1.0.0"
description = "Production-ready symbolic execution server for the Model Context Protocol (MCP)"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Symbolic MCP Contributors", email = "contributors@symbolic-mcp.org"}
]
maintainers = [
    {name = "Symbolic MCP Team", email = "team@symbolic-mcp.org"}
]
keywords = [
    "symbolic-execution",
    "mcp",
    "model-context-protocol",
    "static-analysis",
    "formal-verification",
    "security-analysis",
    "crosshair",
    "z3",
    "fastmcp"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Testing",
    "Topic :: Security",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed"
]
requires-python = ">=3.11"
dependencies = [
    # Core MCP framework
    "fastmcp>=2.0.0,<3.0.0",

    # Symbolic execution engine
    "crosshair-tool>=0.0.70,<0.1.0",

    # SMT solver backend
    "z3-solver>=4.12.0,<5.0.0",

    # Design by contracts
    "icontract>=2.6.0,<3.0.0",

    # Security sandboxing
    "RestrictedPython>=8.1,<9.0",

    # Type system extensions
    "typing-extensions>=4.0.0,<5.0.0",

    # Data validation
    "pydantic>=2.12.0,<3.0.0",

    # System resource monitoring
    "psutil>=6.0.0,<7.0.0"
]

[project.optional-dependencies]
# Development dependencies
dev = [
    # Testing framework
    "pytest>=7.0.0,<8.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "pytest-mock>=3.10.0,<4.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",

    # Code formatting and linting
    "black>=23.0.0,<25.0.0",
    "flake8>=6.0.0,<8.0.0",
    "isort>=5.12.0,<6.0.0",
    "mypy>=1.5.0,<2.0.0",

    # Security scanning
    "bandit>=1.7.0,<2.0.0",
    "safety>=2.3.0,<3.0.0",

    # Documentation
    "mkdocs>=1.5.0,<2.0.0",
    "mkdocs-material>=9.0.0,<10.0.0",
    "mkdocstrings[python]>=0.23.0,<1.0.0",

    # Development utilities
    "pre-commit>=3.4.0,<4.0.0",
    "tox>=4.11.0,<5.0.0",
    "wheel>=0.41.0,<1.0.0",
    "build>=1.0.0,<2.0.0"
]

# Production dependencies
prod = [
    # Enhanced logging
    "structlog>=23.0.0,<24.0.0",

    # Performance monitoring
    "prometheus-client>=0.17.0,<1.0.0",

    # Configuration management
    "pydantic-settings>=2.0.0,<3.0.0"
]

# Experimental dependencies for research features
experimental = [
    # Advanced symbolic execution
    "angr>=9.2.0,<10.0.0",

    # Machine learning for path prioritization
    "scikit-learn>=1.3.0,<2.0.0",
    "numpy>=1.24.0,<2.0.0",

    # Parallel processing
    "ray>=2.8.0,<3.0.0"
]

[project.urls]
Homepage = "https://github.com/your-org/symbolic-mcp"
Documentation = "https://symbolic-mcp.readthedocs.io"
Repository = "https://github.com/your-org/symbolic-mcp.git"
"Bug Tracker" = "https://github.com/your-org/symbolic-mcp/issues"
Changelog = "https://github.com/your-org/symbolic-mcp/blob/main/CHANGELOG.md"
Discussions = "https://github.com/your-org/symbolic-mcp/discussions"
Security = "https://github.com/your-org/symbolic-mcp/blob/main/SECURITY.md"

[project.scripts]
symbolic-mcp = "main:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["."]
include = ["main*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.black]
line-length = 88
target-version = ["py311", "py312", "py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["main"]
known_third_party = ["fastmcp", "crosshair", "z3", "icontract", "RestrictedPython"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "crosshair.*",
    "z3.*",
    "crosshair_tool.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--cov=main",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml"
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "security: marks tests as security-related tests",
    "unit: marks tests as unit tests"
]

[tool.coverage.run]
source = ["main"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[tool.bandit]
exclude_dirs = ["tests", "build", "dist"]
skips = [
    "B101",  # assert_used (we use assertions in tests)
    "B601"   # shell_injection_process (controlled usage)
]

[tool.flake8]
max-line-length = 88
extend-ignore = [
    "E203",  # whitespace before ':'
    "W503"   # line break before binary operator
]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
    ".venv",
    ".tox"
]
per-file-ignores = [
    "__init__.py:F401",  # Imported but unused
    "test_*.py:F401,F811"  # Test files may have unused imports and redefined functions
]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py311,py312,py313,flake8,mypy,bandit,security
isolated_build = true

[testenv]
deps =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    pytest-mock>=3.10.0
commands = pytest {posargs}

[testenv:flake8]
deps = flake8
commands = flake8 main.py

[testenv:mypy]
deps =
    mypy>=1.5.0
    types-psutil
commands = mypy main.py

[testenv:bandit]
deps = bandit>=1.7.0
commands = bandit -r main.py

[testenv:security]
deps =
    bandit>=1.7.0
    safety>=2.3.0
commands =
    bandit -r main.py
    safety check

[testenv:format]
deps =
    black>=23.0.0
    isort>=5.12.0
commands =
    black --check main.py
    isort --check-only main.py

[testenv:format-fix]
deps =
    black>=23.0.0
    isort>=5.12.0
commands =
    black main.py
    isort main.py
"""

# Development workflow configuration
[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = false
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = false
fail-under = 95
exclude = ["tests", "setup.py"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
verbose = 0
quiet = false
whitelist-regex = []
color = true
omit-covered-files = false

# Security configuration
[tool.safety]
ignore = []  # No ignored CVEs
full-report = true
ignore-cvss-severity-below = 0

# Performance monitoring (if prod dependencies are installed)
[tool.wily]
exclude = [
    "tests/*",
    "test_*",
    "setup.py",
    "build/*",
    "dist/*"
]